--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,14 +1,27 @@
 .feed{
     flex: 04;
-    border-right: 50px solid var(--twiter-background);
+    border-right: 1px solid var(--twiter-background);
     min-width: fit-content;
     overflow-y: scroll;
 }
+
+.feed::-webkit-scrollbar{
+    display: none;
+}
+.feed{
+    -ms-overflow-style:none;
+    scrollbar-width: none;
+}
+
 .feed__header{
     position: sticky;
     top:0;
     background-color: white;
-    z-index: 1;
+    z-index: 100;
     border: 1px solid var(--twiter-background);
     padding: 15px 20px;
+}
+.feed__header > h2{
+    font-size: 20px;
+    font-weight: 800;
 }
