--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -27,7 +27,7 @@
   }
   
   .tweetBox__tweetButton {
-    background-color: var(--twitter-color) !important;
+    background-color: var(--twiter-color) !important;
     border: none !important;
     color: white !important;
     font-weight: 900 !important;
